!important! fixed text-overflow ellipsis in Textblob

--- a/app/_component/_themeAble/_card/_infoCard/infoCard.css
+++ b/app/_component/_themeAble/_card/_infoCard/infoCard.css
@@ -72,7 +72,6 @@ c-textblob{
     max-width: 100%;
     overflow: hidden;
     white-space: nowrap;
-    text-overflow: ellipsis;
     width: auto;
     margin-bottom: 5px;
 }
